--- a/index.html
+++ b/index.html
@@ -7,8 +7,64 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <title>Ruby Roadmap</title>
+    <style>
+        .section-title {
+            margin-bottom: 16px;
+        }
+    </style>
 </head>
 <body>
-<h1>Ruby学習ロードマップ</h1>
+<div class="container">
+    <!-- Page Content goes here -->
+    <h2>Ruby学習ロードマップ</h2>
+    <div class="divider"></div>
+    <div class="section">
+        <h5 class="section-title">1.Ruby基礎編</h5>
+        <div class="collection">
+            <a href="https://dotinstall.com/lessons/basic_ruby_v4" class="collection-item">ドットインストール</a>
+            <a href="https://prog-8.com/languages/ruby" class="collection-item">Progate</a>
+            <a href="https://www.amazon.co.jp/%E3%82%B9%E3%83%A9%E3%82%B9%E3%83%A9%E8%AA%AD%E3%82%81%E3%82%8B-Ruby%E3%81%B5%E3%82%8A%E3%81%8C%E3%81%AA%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%9F%E3%83%B3%E3%82%B0-%E9%AB%98%E6%A9%8B%E5%BE%81%E7%BE%A9-ebook/dp/B07Q6KGSTX?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&dchild=1&keywords=ruby&qid=1611845321&sr=8-6&linkCode=ll1&tag=exhikkii0e-22&linkId=67994dea08d3b428451428bd23e1e867&language=ja_JP&ref_=as_li_ss_tl" class="collection-item">スラスラ読める Rubyふりがなプログラミング</a>
+            <a href="https://try.ruby-lang.org/" class="collection-item">TryRuby</a>
+        </div>
+    </div>
+    <div class="divider"></div>
+    <div class="section">
+        <h5 class="section-title" class="mb-2">2.Rails基礎編</h5>
+        <div class="collection">
+            <a href="#!" class="collection-item">hoge</a>
+            <a href="#!" class="collection-item">hoge</a>
+            <a href="#!" class="collection-item">hoge</a>
+            <a href="#!" class="collection-item">hoge</a>
+        </div>
+    </div>
+    <div class="divider"></div>
+    <div class="section">
+        <h5 class="section-title">3.Ruby応用編</h5>
+        <div class="collection">
+            <a href="#!" class="collection-item">hoge</a>
+            <a href="#!" class="collection-item">hoge</a>
+            <a href="#!" class="collection-item">hoge</a>
+            <a href="#!" class="collection-item">hoge</a>
+        </div>
+    </div>
+    <div class="section">
+        <h5 class="section-title">4.Rails応用編</h5>
+        <div class="collection">
+            <a href="#!" class="collection-item">hoge</a>
+            <a href="#!" class="collection-item">hoge</a>
+            <a href="#!" class="collection-item">hoge</a>
+            <a href="#!" class="collection-item">hoge</a>
+        </div>
+    </div>
+    <div class="section">
+        <h5 class="section-title">スクール編</h5>
+        <div class="collection">
+            <a href="#!" class="collection-item">hoge</a>
+            <a href="#!" class="collection-item">hoge</a>
+            <a href="#!" class="collection-item">hoge</a>
+            <a href="#!" class="collection-item">hoge</a>
+        </div>
+    </div>
+</div>
 </body>
 </html>
