linkカラーを定義

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         .section-title {
             margin-bottom: 16px;
         }
+        .link {
+            color: #26a69a;
+        }
     </style>
 </head>
 <body>
@@ -29,15 +32,15 @@
         <div class="card horizontal">
             <div class="card-stacked">
                 <div class="card-content">
-                    <p>Rubyってどんな言語なのかを知る1歩目は<a href="https://dotinstall.com/lessons/basic_ruby_v4">ドットインストール</a>がわかりやすいですね。</p>
-                    <p>ドットインストールでちょっと理解したら、次は<a href="https://prog-8.com/languages/ruby">Progate</a>がおすすめです。アウトプット形式なのでいい復讐にもなります。</p>
+                    <p>Rubyってどんな言語なのかを知る1歩目は<a href="https://dotinstall.com/lessons/basic_ruby_v4" class="link">ドットインストール</a>がわかりやすいですね。</p>
+                    <p>ドットインストールでちょっと理解したら、次は<a href="https://prog-8.com/languages/ruby" class="link">Progate</a>がおすすめです。アウトプット形式なのでいい復讐にもなります。</p>
                     <p>
-                        <a href="https://www.amazon.co.jp/%E3%82%B9%E3%83%A9%E3%82%B9%E3%83%A9%E8%AA%AD%E3%82%81%E3%82%8B-Ruby%E3%81%B5%E3%82%8A%E3%81%8C%E3%81%AA%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%9F%E3%83%B3%E3%82%B0-%E9%AB%98%E6%A9%8B%E5%BE%81%E7%BE%A9-ebook/dp/B07Q6KGSTX?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&dchild=1&keywords=ruby&qid=1611845321&sr=8-6&linkCode=ll1&tag=exhikkii0e-22&linkId=67994dea08d3b428451428bd23e1e867&language=ja_JP&ref_=as_li_ss_tl">
+                        <a href="https://www.amazon.co.jp/%E3%82%B9%E3%83%A9%E3%82%B9%E3%83%A9%E8%AA%AD%E3%82%81%E3%82%8B-Ruby%E3%81%B5%E3%82%8A%E3%81%8C%E3%81%AA%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%9F%E3%83%B3%E3%82%B0-%E9%AB%98%E6%A9%8B%E5%BE%81%E7%BE%A9-ebook/dp/B07Q6KGSTX?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&dchild=1&keywords=ruby&qid=1611845321&sr=8-6&linkCode=ll1&tag=exhikkii0e-22&linkId=67994dea08d3b428451428bd23e1e867&language=ja_JP&ref_=as_li_ss_tl" class="link">
                             スラスラ読める Rubyふりがなプログラミング
                         </a>
                         は初学者が取っ付きやすい本だと思います。Ruby on Railsにも少し触れているので、Rails学習へ移るいい架け橋になると思います。
                     </p>
-                    <p><a href="https://try.ruby-lang.org/">TryRuby</a>はアウトプット形式で、知識定着を確かめるにはちょうどいいサービスです。</p>
+                    <p><a href="https://try.ruby-lang.org/" class="link">TryRuby</a>はアウトプット形式で、知識定着を確かめるにはちょうどいいサービスです。</p>
                 </div>
             </div>
         </div>
