--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@
             <a href="https://dotinstall.com/lessons/basic_rails_v3" class="collection-item">ドットインストール(Ruby on Rails 5入門)</a>
             <a href="https://dotinstall.com/lessons/basic_activerecord_v2" class="collection-item">ドットインストール(Active Record入門)</a>
             <a href="https://prog-8.com/languages/rails5" class="collection-item">Progate</a>
+            <a href="https://railstutorial.jp/" class="collection-item">Ruby on Rails チュートリアル</a>
+            <a href="https://www.amazon.co.jp/%E3%83%91%E3%83%BC%E3%83%95%E3%82%A7%E3%82%AF%E3%83%88-Ruby-Rails-%E3%80%90%E5%A2%97%E8%A3%9C%E6%94%B9%E8%A8%82%E7%89%88%E3%80%91-Perfect/dp/4297114623?_encoding=UTF8&qid=&sr=&linkCode=ll1&tag=exhikkii0e-22&linkId=a9ae61d3d4761ae1ab9d48d92f9635ad&language=ja_JP&ref_=as_li_ss_tl" class="collection-item">パーフェクト Ruby on Rails 【増補改訂版】</a>
+        </div>
+        <div class="card horizontal">
+            <div class="card-stacked">
+                <div class="card-content">
+                </div>
+            </div>
         </div>
     </div>
     <div class="divider"></div>
