--- a/index.html
+++ b/index.html
@@ -53,12 +53,17 @@
             <a href="https://dotinstall.com/lessons/basic_rails_v3" class="collection-item">ドットインストール(Ruby on Rails 5入門)</a>
             <a href="https://dotinstall.com/lessons/basic_activerecord_v2" class="collection-item">ドットインストール(Active Record入門)</a>
             <a href="https://prog-8.com/languages/rails5" class="collection-item">Progate</a>
-            <a href="https://railstutorial.jp/" class="collection-item">Ruby on Rails チュートリアル</a>
             <a href="https://www.amazon.co.jp/%E3%83%91%E3%83%BC%E3%83%95%E3%82%A7%E3%82%AF%E3%83%88-Ruby-Rails-%E3%80%90%E5%A2%97%E8%A3%9C%E6%94%B9%E8%A8%82%E7%89%88%E3%80%91-Perfect/dp/4297114623?_encoding=UTF8&qid=&sr=&linkCode=ll1&tag=exhikkii0e-22&linkId=a9ae61d3d4761ae1ab9d48d92f9635ad&language=ja_JP&ref_=as_li_ss_tl" class="collection-item">パーフェクト Ruby on Rails 【増補改訂版】</a>
+            <a href="https://railstutorial.jp/" class="collection-item">Ruby on Rails チュートリアル</a>
         </div>
         <div class="card horizontal">
             <div class="card-stacked">
                 <div class="card-content">
+                    <p>Railsもドットインストールから始めるといいと思います。やはりわかりやすいですし、1回のレッスンが3分弱と短いので集中して受講できます。</p>
+                    <p>このタイミングで、ドットインストールのActive Record入門も受講しましょう。Active Recordはざっくり言うとデータベースとのやりとりを楽にしてくれる便利アイテムです。Railsではマストなスキルなので合わせて受講しましょう。</p>
+                    <p>ドットインストールで軽くインプットができたはずなので、progateで復習しながらアウトプットしてみましょう。</p>
+                    <p>続いてパーフェクト Ruby on Railsをやってみましょう。この本ではRailsの基礎的なところを広く学習できる良書です。ドットインストールやprogateでは扱っていないけど、実務ではよく使う機能が紹介されています。progateに比べ少しレベルが上がりますがぜひチャレンジしてみてください</p>
+                    <p>ここまででRailsに関してざっくりわかるようになっているはずです。さらにRuby on Rails チュートリアルに挑戦してみましょう。これは実際にアプリを作りながら学べます。量がとても多くやりごたえがありますが、終わる頃にはある程度わかる状態になれるはずです。</p>
                 </div>
             </div>
         </div>
