読みたい編

--- a/index.html
+++ b/index.html
@@ -96,6 +96,15 @@
             <a href="#!" class="collection-item">hoge</a>
         </div>
     </div>
+    <div class="section">
+        <h5 class="section-title">目を通しておきたい編</h5>
+        <div class="collection">
+            <a href="https://github.com/rubocop-hq/rails-style-guide#introduction" class="collection-item">The Rails Style Guide</a>
+            <a href="#!" class="collection-item">hoge</a>
+            <a href="#!" class="collection-item">hoge</a>
+            <a href="#!" class="collection-item">hoge</a>
+        </div>
+    </div>
 </div>
 </body>
 </html>
