--- a/index.html
+++ b/index.html
@@ -100,9 +100,8 @@
         <h5 class="section-title">目を通しておきたい編</h5>
         <div class="collection">
             <a href="https://github.com/rubocop-hq/rails-style-guide#introduction" class="collection-item">The Rails Style Guide</a>
-            <a href="#!" class="collection-item">hoge</a>
-            <a href="#!" class="collection-item">hoge</a>
-            <a href="#!" class="collection-item">hoge</a>
+            <a href="https://www.justinweiss.com/articles/4-simple-memoization-patterns-in-ruby-and-one-gem/" class="collection-item">memoizeについて</a>
+            <a href="https://naturaily.com/blog/ruby-on-rails-enum" class="collection-item">enumについて</a>
         </div>
     </div>
 </div>
