--- a/index.html
+++ b/index.html
@@ -72,10 +72,20 @@
     <div class="section">
         <h5 class="section-title">3.Ruby応用編</h5>
         <div class="collection">
-            <a href="#!" class="collection-item">hoge</a>
-            <a href="#!" class="collection-item">hoge</a>
-            <a href="#!" class="collection-item">hoge</a>
-            <a href="#!" class="collection-item">hoge</a>
+            <a href="https://www.amazon.co.jp/%E3%83%97%E3%83%AD%E3%82%92%E7%9B%AE%E6%8C%87%E3%81%99%E4%BA%BA%E3%81%AE%E3%81%9F%E3%82%81%E3%81%AERuby%E5%85%A5%E9%96%80-%E8%A8%80%E8%AA%9E%E4%BB%95%E6%A7%98%E3%81%8B%E3%82%89%E3%83%86%E3%82%B9%E3%83%88%E9%A7%86%E5%8B%95%E9%96%8B%E7%99%BA%E3%83%BB%E3%83%87%E3%83%90%E3%83%83%E3%82%B0%E6%8A%80%E6%B3%95%E3%81%BE%E3%81%A7-Software-Design-plus-ebook/dp/B077Q8BXHC?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&crid=2GJBXDGZLVTQN&dchild=1&keywords=ruby&qid=1612262946&sprefix=ruby%2Caps%2C292&sr=8-1&linkCode=ll1&tag=exhikkii0e-22&linkId=0fb722907280a87bc4f5739572a9ae97&language=ja_JP&ref_=as_li_ss_tl" class="collection-item">プロを目指す人のためのRuby入門 言語仕様からテスト駆動開発・デバッグ技法まで</a>
+            <a href="https://www.amazon.co.jp/%E3%82%AA%E3%83%96%E3%82%B8%E3%82%A7%E3%82%AF%E3%83%88%E6%8C%87%E5%90%91%E8%A8%AD%E8%A8%88%E5%AE%9F%E8%B7%B5%E3%82%AC%E3%82%A4%E3%83%89-%EF%BD%9ERuby%E3%81%A7%E3%82%8F%E3%81%8B%E3%82%8B-%E9%80%B2%E5%8C%96%E3%81%97%E3%81%A4%E3%81%A5%E3%81%91%E3%82%8B%E6%9F%94%E8%BB%9F%E3%81%AA%E3%82%A2%E3%83%97%E3%83%AA%E3%82%B1%E3%83%BC%E3%82%B7%E3%83%A7%E3%83%B3%E3%81%AE%E8%82%B2%E3%81%A6%E6%96%B9-Sandi-Metz-ebook/dp/B01L8SEVYI?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&dchild=1&keywords=ruby&qid=1612262991&sr=8-10&linkCode=ll1&tag=exhikkii0e-22&linkId=db92f89da7e10e4961f6afe0fcd4582d&language=ja_JP&ref_=as_li_ss_tl" class="collection-item">オブジェクト指向設計実践ガイド　～Rubyでわかる 進化しつづける柔軟なアプリケーションの育て方</a>
+            <a href="https://www.amazon.co.jp/Effective-Ruby-Peter-J-Jones-ebook/dp/B00SF6JN4K?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&dchild=1&keywords=ruby&qid=1612263024&sr=8-20&linkCode=ll1&tag=exhikkii0e-22&linkId=50445e9cbdc88ef85576f223c70d877f&language=ja_JP&ref_=as_li_ss_tl" class="collection-item">Effective Ruby</a>
+            <a href="https://www.amazon.co.jp/%E3%83%A1%E3%82%BF%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%9F%E3%83%B3%E3%82%B0Ruby-%E7%AC%AC2%E7%89%88-Paolo-Perrotta/dp/4873117437?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&dchild=1&keywords=ruby&qid=1612263065&sr=8-97&linkCode=ll1&tag=exhikkii0e-22&linkId=cb5dcc6ae1ed25cb2b97e1a4f40c9c5b&language=ja_JP&ref_=as_li_ss_tl" class="collection-item">メタプログラミングRuby</a>
+        </div>
+        <div class="card horizontal">
+            <div class="card-stacked">
+                <div class="card-content">
+                    <p><a href="https://www.amazon.co.jp/%E3%83%97%E3%83%AD%E3%82%92%E7%9B%AE%E6%8C%87%E3%81%99%E4%BA%BA%E3%81%AE%E3%81%9F%E3%82%81%E3%81%AERuby%E5%85%A5%E9%96%80-%E8%A8%80%E8%AA%9E%E4%BB%95%E6%A7%98%E3%81%8B%E3%82%89%E3%83%86%E3%82%B9%E3%83%88%E9%A7%86%E5%8B%95%E9%96%8B%E7%99%BA%E3%83%BB%E3%83%87%E3%83%90%E3%83%83%E3%82%B0%E6%8A%80%E6%B3%95%E3%81%BE%E3%81%A7-Software-Design-plus-ebook/dp/B077Q8BXHC?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&crid=2GJBXDGZLVTQN&dchild=1&keywords=ruby&qid=1612262946&sprefix=ruby%2Caps%2C292&sr=8-1&linkCode=ll1&tag=exhikkii0e-22&linkId=0fb722907280a87bc4f5739572a9ae97&language=ja_JP&ref_=as_li_ss_tl" class="collection-item">プロを目指す人のためのRuby入門 言語仕様からテスト駆動開発・デバッグ技法まで</a>いわゆるチェリー本です。テストやオブジェクトやProcなど基本編ではあまり扱わなかった部分が詳しく記載されています。辞書代わりにもなる1冊です。</p>
+                    <p><a href="https://www.amazon.co.jp/%E3%82%AA%E3%83%96%E3%82%B8%E3%82%A7%E3%82%AF%E3%83%88%E6%8C%87%E5%90%91%E8%A8%AD%E8%A8%88%E5%AE%9F%E8%B7%B5%E3%82%AC%E3%82%A4%E3%83%89-%EF%BD%9ERuby%E3%81%A7%E3%82%8F%E3%81%8B%E3%82%8B-%E9%80%B2%E5%8C%96%E3%81%97%E3%81%A4%E3%81%A5%E3%81%91%E3%82%8B%E6%9F%94%E8%BB%9F%E3%81%AA%E3%82%A2%E3%83%97%E3%83%AA%E3%82%B1%E3%83%BC%E3%82%B7%E3%83%A7%E3%83%B3%E3%81%AE%E8%82%B2%E3%81%A6%E6%96%B9-Sandi-Metz-ebook/dp/B01L8SEVYI?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&dchild=1&keywords=ruby&qid=1612262991&sr=8-10&linkCode=ll1&tag=exhikkii0e-22&linkId=db92f89da7e10e4961f6afe0fcd4582d&language=ja_JP&ref_=as_li_ss_tl" class="collection-item">オブジェクト指向設計実践ガイド　～Rubyでわかる 進化しつづける柔軟なアプリケーションの育て方</a>も名著です。Rubyでオブジェクト指向で書くときの参考になります。実務でもよく見かけるRubyらしい書き方やイディオムもふんだんにあります。これらを身につければRubyで綺麗にかけるようになります。</p>
+                    <p><a href="https://www.amazon.co.jp/Effective-Ruby-Peter-J-Jones-ebook/dp/B00SF6JN4K?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&dchild=1&keywords=ruby&qid=1612263024&sr=8-20&linkCode=ll1&tag=exhikkii0e-22&linkId=50445e9cbdc88ef85576f223c70d877f&language=ja_JP&ref_=as_li_ss_tl" class="collection-item">Effective Ruby</a>は少し難しいですが読んで損はないです。Rubyが裏側でどんなことをしているのかが見えてきて、より一層理解してRubyを書くことができるようになります。またよく使われるtipsもあるのでそうした箇所も参考になります。</p>
+                    <p><a href="https://www.amazon.co.jp/%E3%83%A1%E3%82%BF%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%9F%E3%83%B3%E3%82%B0Ruby-%E7%AC%AC2%E7%89%88-Paolo-Perrotta/dp/4873117437?__mk_ja_JP=%E3%82%AB%E3%82%BF%E3%82%AB%E3%83%8A&dchild=1&keywords=ruby&qid=1612263065&sr=8-97&linkCode=ll1&tag=exhikkii0e-22&linkId=cb5dcc6ae1ed25cb2b97e1a4f40c9c5b&language=ja_JP&ref_=as_li_ss_tl" class="collection-item">メタプログラミングRuby</a>はRubyの醍醐味であるメタプロを学べます。メタプロは知らないとコードを見ただけでは理解できない黒魔術のようなものです。初めは自分で書けなくてもいいので読める程度にはなっておいたほうがいいです。特にgemのコードを探る時に重宝する力となります</p>
+                </div>
+            </div>
         </div>
     </div>
     <div class="section">
@@ -99,6 +109,7 @@
     <div class="section">
         <h5 class="section-title">目を通しておきたい編</h5>
         <div class="collection">
+            <a href="https://rubystyle.guide/#introduction" class="collection-item">The Ruby Style Guide</a>
             <a href="https://github.com/rubocop-hq/rails-style-guide#introduction" class="collection-item">The Rails Style Guide</a>
             <a href="https://www.justinweiss.com/articles/4-simple-memoization-patterns-in-ruby-and-one-gem/" class="collection-item">memoizeについて</a>
             <a href="https://naturaily.com/blog/ruby-on-rails-enum" class="collection-item">enumについて</a>
