スクール編を追加

--- a/index.html
+++ b/index.html
@@ -100,10 +100,36 @@
     <div class="section">
         <h5 class="section-title">スクール編</h5>
         <div class="collection">
-            <a href="#!" class="collection-item">hoge</a>
-            <a href="#!" class="collection-item">hoge</a>
-            <a href="#!" class="collection-item">hoge</a>
-            <a href="#!" class="collection-item">hoge</a>
+            <a href="https://px.a8.net/svt/ejp?a8mat=3H3AJ9+14HHWY+3GWO+BW8O2&a8ejpredirect=https%3A%2F%2Ftechacademy.jp%2Fhtmlcss-trial" class="collection-item" rel="nofollow">Tech Academy</a>
+            <a href="https://tech-camp.in/" class="collection-item" rel="nofollow">TECH CAMP</a>
+            <a href="https://px.a8.net/svt/ejp?a8mat=3H3G0W+F4RNAQ+3GOM+63WO2" class="collection-item" rel="nofollow">CodeCamp</a>
+        </div>
+        <div class="card horizontal">
+            <div class="card-stacked">
+                <div class="card-content">
+                    <p>ここでは自分が体験/受講したことのあるスクールを紹介します</p>
+                    <p>スクールはプログラミング学習において必須ではないと思いますが、お金に余裕があるなら通って損はないと思います。</p>
+                    <p><a href="https://px.a8.net/svt/ejp?a8mat=3H3AJ9+14HHWY+3GWO+BW8O2&a8ejpredirect=https%3A%2F%2Ftechacademy.jp%2Fhtmlcss-trial" rel="nofollow">Tech Academy</a>はレベルに関しては高くないですが、教材はわかりやすいです。ガチエンジニアのメンターさんにカリキュラムや学習について相談できるのが強みですね。</p>
+                    <p><a href="https://tech-camp.in/" rel="nofollow">TECH CAMP</a>もレベルは高くないです。メリットは同期の仲間たちと切磋琢磨できることと、メンターさんに質問できることですね。</p>
+                    <p><a href="https://px.a8.net/svt/ejp?a8mat=3H3G0W+F4RNAQ+3GOM+63WO2" rel="nofollow">CodeCamp</a>は私が受講したことないのですが、知り合いが未経験で受講してエンジニアになっていたので、いいスクールなんだろなと思い載せました笑</p>
+                    <br>
+                    <p>以下、スクールのメリットに関して私の考えをまとめます。</p>
+                    <h5>1:自分の作業を見てもらえるということですだと思います。</h5>
+                    <p>自分1人で独学をしているとコードを人に見てもらうきっかけがありません。</p>
+                    <p>そのためコードの読みやすさをあまり意識できず読みにくいコードのまま学習が進み、ポートフォリオのコードも汚いままとなりうります。</p>
+                    <p>スクールに通えば、メンターであったり同期の人にコードを見えもらう機会があるでしょう。そうした機会があれば綺麗なコードを書く意識が芽生えると思います。</p>
+                    <h5>2:質問する力と伝える力が身につくことです。</h5>
+                    <p>スクールに通っていると、メンタに質問する際に何がわからなくて困っているのかをわかりやすく伝えるように工夫すると思います。</p>
+                    <p>実際にエンジニアとして仕事してみるとわかるのですが、質問する力/伝える力はとても重要です。</p>
+                    <p>質問力と伝える力がないと、結局何が聞きたいのかわからない質問をしてしまい、先輩エンジニアを困らせてしまいます。</p>
+                    <p>スクールではカリキュラムよりも質問できるというところを最大限に活かして欲しいです。</p>
+                    <br>
+                    <h5>以上、メリットについて思うところでした。</h5>
+                    <p>最近スクールについて悪い噂ばかり聞くのですが、悪く言う人は実際に受講したことあるのかなと。。。</p>
+                    <p>スクールも合う人とそうでない人がいるのは当たり前だと思います。</p>
+                    <p>実際に体験行くなり卒業生や在校生に話を聞くなりして、自分に合いそうか判断すればいいと思います。</p>
+                </div>
+            </div>
         </div>
     </div>
     <div class="section">
