--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <html>
 <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6S5JXSKDM0"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-6S5JXSKDM0');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
