アナリティクス導入

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <html>
 <head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6S5JXSKDM0"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-189076070-2"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
-        gtag('config', 'G-6S5JXSKDM0');
+        gtag('config', 'UA-189076070-2');
     </script>
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
