--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             color: #26a69a;
         }
     </style>
+    <meta name="google-site-verification" content="oP_wXeH4I8BeTy2gbDlRfFoMKdEhD3wEm1olqg5Q5fk" />
 </head>
 <body>
 <!-- Google Tag Manager (noscript) -->
