--- a/index.html
+++ b/index.html
@@ -21,9 +21,15 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta content="Ruby on Railsのオススメの学習法を載せています。駆け出しエンジニアがこれからRuby on Railsを勉強する際のロードマップになるサイトです。" name="description">
+    <meta property="og:url" content="https://mitsuru53.github.io/ruby-roadmap/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Ruby on Rails学習ロードマップ" />
+    <meta property="og:description" content="Ruby on Railsのオススメの学習法を載せています。駆け出しエンジニアがこれからRuby on Railsを勉強する際のロードマップになるサイトです。" />
+    <meta property="og:site_name" content="Ruby on Rails学習ロードマップ" />
+    <meta property="og:image" content="https://images.unsplash.com/photo-1481627834876-b7833e8f5570?ixid=MXwxMjA3fDB8MHxzZWFyY2h8N3x8Ym9va3xlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <title>Ruby Roadmap</title>
+    <title>Ruby on Rails学習ロードマップ</title>
     <style>
         .section-title {
             margin-bottom: 16px;
@@ -41,7 +47,7 @@
 <!-- End Google Tag Manager (noscript) -->
 <div class="container">
     <!-- Page Content goes here -->
-    <h2>Ruby学習ロードマップ</h2>
+    <h2>Ruby on Rails学習ロードマップ</h2>
     <div class="divider"></div>
     <div class="section">
         <h5 class="section-title">1.Ruby基礎編</h5>
