--- a/index.html
+++ b/index.html
@@ -161,6 +161,23 @@
         </div>
     </div>
     <div class="section">
+        <h5 class="section-title">RSpec</h5>
+        <div class="collection">
+            <a href="https://www.tutorialspoint.com/rspec/index.htm" class="collection-item">RSpec Tutorial</a>
+            <a href="https://leanpub.com/everydayrailsrspec-jp" class="collection-item">Everyday Rails - RSpecによるRailsテスト入門</a>
+        </div>
+        <div class="card horizontal">
+            <div class="card-stacked">
+                <div class="card-content">
+                    <p>RailsのテストフレームワークはRSpecがよく使われます。</p>
+                    <p><a href="https://railstutorial.jp/" class="collection-item">Ruby on Rails チュートリアル</a>でもRSpecを学びますが、RSpecには他にもたくさんの書き方があります</p>
+                    <p>一度目を通しておくといいと思います。</p>
+                    <p>文法だけではなくテストについての考え方も身につけておきましょう。</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="section">
         <h5 class="section-title">目を通しておきたい編</h5>
         <div class="collection">
             <a href="https://rubystyle.guide/#introduction" class="collection-item">The Ruby Style Guide</a>
